log
Fri 21 Apr 2023 04:15:23 AM UTC: 
 tests:  1|8
total_score: 0/70
005b3fe
Fri 21 Apr 2023 04:32:24 AM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
9e19944
Fri 21 Apr 2023 04:32:52 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
cac5ae2
Fri 21 Apr 2023 04:42:18 AM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  4|7
total_score: 5/70
5a93e65
Fri 21 Apr 2023 04:47:03 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:16: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘void *’ [-Werror=format=]
   82 |       printf("%d",tree->current->pair->key);
      |               ~^  ~~~~~~~~~~~~~~~~~~~~~~~~
      |                |                     |
      |                int                   void *
      |               %p
cc1: all warnings being treated as errors
Compilation failed
b48fd9d
Fri 21 Apr 2023 04:48:41 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:5: error: expected ‘,’ or ‘;’ before ‘if’
   81 |     if(resultado==1)
      |     ^~
treemap.c:85:5: error: ‘else’ without a previous ‘if’
   85 |     else if(resultado==0){
      |     ^~~~
Compilation failed
101b065
Fri 21 Apr 2023 04:48:52 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
ba5a55a
Fri 21 Apr 2023 04:50:33 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
1eb7908
Fri 21 Apr 2023 05:04:18 AM UTC: 
 treemap.c | 36 ++++++++++++++++++++++++++++++++++++
 1 file changed, 36 insertions(+)
 tests:  13|5
total_score: 25/70
d5b7436
Fri 21 Apr 2023 05:10:07 AM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  15|4
total_score: 25/70
d8de1ac
Fri 21 Apr 2023 05:21:01 AM UTC: 
 treemap.c | 33 +++++++++++++++++++++++++++++++++
 1 file changed, 33 insertions(+)
test.c: In function ‘removeNode’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
3e21f6f
Fri 21 Apr 2023 05:22:07 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
250cc6d
Fri 21 Apr 2023 05:26:49 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0dfc383
Fri 21 Apr 2023 05:28:03 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:128:22: error: expected ‘;’ before ‘if’
  128 |     printf("HOLAAAA")
      |                      ^
      |                      ;
  129 |     if(r==1){
      |     ~~                
treemap.c:127:9: error: unused variable ‘r’ [-Werror=unused-variable]
  127 |     int r=tree->lower_than(node->pair->key,aux->pair->key);
      |         ^
cc1: all warnings being treated as errors
Compilation failed
ce5b3c2
Fri 21 Apr 2023 05:28:22 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5aa4988
Fri 21 Apr 2023 05:28:43 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
7adad8b
Fri 21 Apr 2023 05:29:28 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
49bed42
Fri 21 Apr 2023 05:30:55 AM UTC: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|0
6e2adfe
Fri 21 Apr 2023 05:31:09 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:127:15: error: unused variable ‘aux’ [-Werror=unused-variable]
  127 |     TreeNode *aux=node->parent;
      |               ^~~
cc1: all warnings being treated as errors
Compilation failed
c72d1a6
Fri 21 Apr 2023 05:31:23 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
28c35ba
Fri 21 Apr 2023 05:36:15 AM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:139:7: error: ‘aux’ undeclared (first use in this function)
  139 |       aux->left=node->left;
      |       ^~~
treemap.c:139:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
724c5e6
Fri 21 Apr 2023 05:36:51 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
80b8fec
Fri 21 Apr 2023 05:39:15 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d6e11ba
